--- a/src/app/sections/projects/projects-mobile.component.scss
+++ b/src/app/sections/projects/projects-mobile.component.scss
@@ -25,7 +25,6 @@
             top: 530px !important;
         }
     }
-
 }
 
 @media screen and (max-width: 1024px) {
@@ -63,6 +62,6 @@
     }
 
     .section-title {
-        font-size: 42px !important;
+        font-size: 36px !important;
     }
 }
