--- a/src/styles.scss
+++ b/src/styles.scss
@@ -136,13 +136,6 @@ footer {
   }
 }
 
-@media screen and (max-width: 323px) {
-  body {
-    overflow-x: hidden;
-  }
-}
-
-
 /* nur Debug */
 // * {
 //   outline: 1px solid red;
